fixed a spacing issue on mobile break

--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -144,7 +144,7 @@ footer {
 	#main {
 		width: 100%;
 		height: 70%;
-		top: auto;
+		top: 180px;
 		bottom: 0;	
 	}
 }
